// You should write at least 4 snapshot tests for the Accordion component:

import React from 'react'
import ReactDOM from 'react-dom'
import { shallow } from 'enzyme';
import toJson from 'enzyme-to-json';
import { configure } from 'enzyme';
import Adapter from 'enzyme-adapter-react-16';
import Accordion from './Accordion';

configure({ adapter: new Adapter() });

describe(`Accordion Component`, () => {
  const sections = [
    {
      title: 'Section 1',
      content: 'Lorem ipsum dolor sit amet consectetur adipisicing elit.',
    },
    {
      title: 'Section 2',
      content: 'Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!',
    },
    {
      title: 'Section 3',
      content: 'Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?',
    },
  ]

  // The component renders an empty li when the sections prop is not supplied.
  it('renders without errors', () => {
    const div = document.createElement('div');
    ReactDOM.render(<Accordion />, div)
    ReactDOM.unmountComponentAtNode(div);
  })

// The component renders no sections as active by default.
  it('renders empty given no tabs', () => { const wrapper = shallow(<Accordion />) 
    expect(toJson(wrapper)).toMatchSnapshot() })

// The component opens a clicked section.
  it('opens clicked section', () => {
    const wrapper = shallow(<Accordion sections={sections }/>) 
    wrapper.find('button').at(1).simulate('click')
    expect(toJson(wrapper)).toMatchSnapshot()

  })

// The component only opens the last section when multiple sections have been clicked.
  it('closes open tab and opens clicked tab', () => {
    const wrapper = shallow(<Accordion sections={sections} />)
    wrapper.find('button').at(0).simulate('click')
    wrapper.find('button').at(2).simulate('click')
    expect(toJson(wrapper)).toMatchSnapshot()
  })

})