// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Component closes open tab and opens clicked tab 1`] = `
<div>
  <ul
    className="accordion-list"
  >
    <li
      className="accordion-list-item"
      key="0"
    >
      <button
        onClick={[Function]}
      >
        Section 1
      </button>
    </li>
    <li
      className="accordion-list-item"
      key="1"
    >
      <button
        onClick={[Function]}
      >
        Section 2
      </button>
    </li>
    <li
      className="accordion-list-item"
      key="2"
    >
      <button
        onClick={[Function]}
      >
        Section 3
      </button>
      <p>
        Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
      </p>
    </li>
  </ul>
</div>
`;

exports[`Accordion Component opens clicked section 1`] = `
<div>
  <ul
    className="accordion-list"
  >
    <li
      className="accordion-list-item"
      key="0"
    >
      <button
        onClick={[Function]}
      >
        Section 1
      </button>
    </li>
    <li
      className="accordion-list-item"
      key="1"
    >
      <button
        onClick={[Function]}
      >
        Section 2
      </button>
      <p>
        Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
      </p>
    </li>
    <li
      className="accordion-list-item"
      key="2"
    >
      <button
        onClick={[Function]}
      >
        Section 3
      </button>
    </li>
  </ul>
</div>
`;

exports[`Accordion Component renders empty given no tabs 1`] = `
<div>
  <ul
    className="accordion-list"
  />
</div>
`;
